// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Details > should match snapshot - expander 1`] = `
<details
  class="nhsuk-details nhsuk-expander"
  data-testid="details"
>
  <summary
    class="nhsuk-details__summary"
  >
    <span
      class="nhsuk-details__summary-text"
    >
      Summary text
    </span>
  </summary>
  <div
    class="nhsuk-details__text"
  >
    Details text
  </div>
</details>
`;

exports[`Details > should match snapshot - expander group 1`] = `
<details
  class="nhsuk-details nhsuk-expander"
  data-testid="details"
>
  <summary
    class="nhsuk-details__summary"
  >
    <span
      class="nhsuk-details__summary-text"
    >
      Summary text
    </span>
  </summary>
  <div
    class="nhsuk-details__text"
  >
    Details text
  </div>
</details>
`;

exports[`Details > should match snapshot 1`] = `
<details
  class="nhsuk-details"
  data-testid="details"
>
  <summary
    class="nhsuk-details__summary"
  >
    <span
      class="nhsuk-details__summary-text"
    >
      Summary text
    </span>
  </summary>
  <div
    class="nhsuk-details__text"
  >
    Details text
  </div>
</details>
`;
